Fix typos in recipes/cheesecake.html and recipes/snickerdoodle.html

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -6,7 +6,7 @@
     <title>Cheesecake</title>
 </head>
 <body>
-    <h1>cheesecake recipe</h1>
+    <h1>Cheesecake recipe</h1>
     <img src="../assets/cheesecake.png" alt="cheesecake">
     <h2>Strawberry cheesecake in a jar</h2>
     <h3>Ingredients</h3>
