--- a/recipes/snickerdoodle.html
+++ b/recipes/snickerdoodle.html
@@ -6,7 +6,7 @@
     <title>Snickerdoodle Bars</title>
 </head>
 <body>
-    <h1>snickerdoodle bars recipe</h1>
+    <h1>Snickerdoodle bars recipe</h1>
     <img src="../assets/snickerdoodle.png" alt="snickerdoodle bars">
     <h2>Easy to make snickerdoodle bars</h2>
     <h3>Ingredients</h3>
