--- a/recipes/lemon-meringue-cake.html
+++ b/recipes/lemon-meringue-cake.html
@@ -1,75 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lemon Meringue Cake</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lemon Meringue Cake</title>
+  <link rel="stylesheet" href="/assets/styles/index.css">
+</head>
+
+<body>
+  <div class="header-text details-header">
     <h1>Lemon Meringue Cake recipe</h1>
+  </div>
+  <div class="recipe-details-img-container">
     <img src="../assets/lemon-meringue-cake.png" alt="lemon meringue cake" />
+  </div>
+  <div class="recipe-desc-text">
     <h2>
       The best of both worlds if you love lemon meringue pie and cheesecake
     </h2>
-    <h3>Ingredients</h3>
-    <h4>Crust:</h4>
-    <ul>
-      <li>2 cups shortbread cookie crumbs</li>
-      <li><small>1/4</small> cup melted butter</li>
-    </ul>
-    <h4>Filling:</h4>
-    <ul>
-      <li>3 (8 ounce) packages cream cheese, softened</li>
-      <li>1 cup sour cream</li>
-      <li>1 cup white sugar</li>
-      <li>4 large eggs</li>
-      <li><small>1/4</small> cup fresh lemon juice</li>
-      <li>1 medium lemon, zested</li>
-      <li>1 teaspoon vanilla extract</li>
-    </ul>
+  </div>
+  <h3 class="list-header">Ingredients</h3>
+  <h4 class="sub-header">Crust:</h4>
+  <ul class="list-container">
+    <li>2 cups shortbread cookie crumbs</li>
+    <li><small>1/4</small> cup melted butter</li>
+  </ul>
+  <h4 class="list-header">Filling:</h4>
+  <ul class="list-container">
+    <li>3 (8 ounce) packages cream cheese, softened</li>
+    <li>1 cup sour cream</li>
+    <li>1 cup white sugar</li>
+    <li>4 large eggs</li>
+    <li><small>1/4</small> cup fresh lemon juice</li>
+    <li>1 medium lemon, zested</li>
+    <li>1 teaspoon vanilla extract</li>
+  </ul>
 
-    <h4>Meringue Topping:</h4>
-    <ul>
-      <li>4 large egg whites</li>
-      <li><small>1/4</small> cup white sugar</li>
-      <li><small>1/4</small> teaspoon cream of tartar (Optional)</li>
-      <li>1<small>1/2</small> cups lemon curd</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-      <li>Preheat the oven to 325 degrees F (165 degrees C).</li>
-      <li>
-        Make the crust: Mix cookie crumbs and melted butter together in a bowl
-        until evenly combined; press into the bottom of a 9-inch springform pan.
-      </li>
-      <li>
-        Make the filling: Beat cream cheese, sour cream, and sugar together in a
-        bowl with an electric mixer until smooth and creamy. Add eggs, one at a
-        time, beating well after each addition. Mix in lemon juice, lemon zest,
-        and vanilla until smooth, scraping the bottom and sides of the bowl as
-        needed. Spread mixture over crust in the springform pan.
-      </li>
-      <li>
-        Bake in the preheated oven until almost set in the center, about 1 hour.
-        Let cool to room temperature, about 1 hour, then refrigerate until
-        completely cooled, at least 3 to 4 hours.
-      </li>
-      <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
-      <li>
-        Make the meringue: Beat egg whites in a bowl with an electric mixer
-        until soft peaks form. Beat in sugar and cream of tartar until mixture
-        is glossy and stiff peaks form.
-      </li>
-      <li>
-        Spread lemon curd over chilled cheesecake. Mound whipped egg whites over
-        top and spread until curd is completely covered.
-      </li>
-      <li>
-        Bake in the preheated oven until meringue is golden brown, about 10
-        minutes. Remove from the oven and chill, uncovered, in the refrigerator
-        for at least 1 hour or up to 1 day before serving. Don't cover the
-        meringue or it may collapse.
-      </li>
-    </ol>
-  </body>
+  <h4 class="sub-header">Meringue Topping:</h4>
+  <ul>
+    <li>4 large egg whites</li>
+    <li><small>1/4</small> cup white sugar</li>
+    <li><small>1/4</small> teaspoon cream of tartar (Optional)</li>
+    <li>1<small>1/2</small> cups lemon curd</li>
+  </ul>
+  <h3 class="list-header">Steps</h3>
+  <ol class="list-container">
+    <li>Preheat the oven to 325 degrees F (165 degrees C).</li>
+    <li>
+      Make the crust: Mix cookie crumbs and melted butter together in a bowl
+      until evenly combined; press into the bottom of a 9-inch springform pan.
+    </li>
+    <li>
+      Make the filling: Beat cream cheese, sour cream, and sugar together in a
+      bowl with an electric mixer until smooth and creamy. Add eggs, one at a
+      time, beating well after each addition. Mix in lemon juice, lemon zest,
+      and vanilla until smooth, scraping the bottom and sides of the bowl as
+      needed. Spread mixture over crust in the springform pan.
+    </li>
+    <li>
+      Bake in the preheated oven until almost set in the center, about 1 hour.
+      Let cool to room temperature, about 1 hour, then refrigerate until
+      completely cooled, at least 3 to 4 hours.
+    </li>
+    <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
+    <li>
+      Make the meringue: Beat egg whites in a bowl with an electric mixer
+      until soft peaks form. Beat in sugar and cream of tartar until mixture
+      is glossy and stiff peaks form.
+    </li>
+    <li>
+      Spread lemon curd over chilled cheesecake. Mound whipped egg whites over
+      top and spread until curd is completely covered.
+    </li>
+    <li>
+      Bake in the preheated oven until meringue is golden brown, about 10
+      minutes. Remove from the oven and chill, uncovered, in the refrigerator
+      for at least 1 hour or up to 1 day before serving. Don't cover the
+      meringue or it may collapse.
+    </li>
+  </ol>
+</body>
+
 </html>
