--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -1,35 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheesecake</title>
+    <link rel="stylesheet" href="/assets/styles/index.css">
+
 </head>
+
 <body>
-    <h1>Cheesecake recipe</h1>
-    <img src="../assets/cheesecake.png" alt="cheesecake">
-    <h2>Strawberry cheesecake in a jar</h2>
-    <h3>Ingredients</h3>
-    <h4>Crust:</h4>
-    <ul>
+    <div class="header-text details-header">
+        <h1>Cheesecake recipe</h1>
+    </div>
+    <div class="recipe-details-img-container">
+        <img src="../assets/cheesecake.png" alt="cheesecake">
+    </div>
+    <div class="recipe-desc-text">
+        <h2>Strawberry cheesecake in a jar</h2>
+    </div>
+    <h3 class="list-header">Ingredients</h3>
+    <h4 class="sub-header">Crust:</h4>
+    <ul class="list-container">
         <li>1 <small>1/2</small> cups graham cracker crumbs</li>
         <li><small>1/2</small> cup butter, melted</li>
         <li><small>1/4</small> cup white sugar</li>
         <li>4 half pint canning jars with lids and rings</li>
     </ul>
-    <h4>Cheesecake:</h4>
-    <ul>
+    <h4 class="list-header">Cheesecake:</h4>
+    <ul class="list-container">
         <li>1 (8 ounce) package cream cheese, softened</li>
         <li>1 (8 ounce) container frozen whipped topping, thawed</li>
         <li><small>2/3</small> cup white sugar</li>
         <li>1 teaspoon vanilla extract</li>
         <li>4 fresh strawberries, sliced</li>
     </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Prepare crust: Mix graham cracker crumbs, melted butter, and 1/4 cup sugar together in a bowl. Press 1/4 of mixture into the bottom of each jar.</li>
-        <li>Prepare cheesecake: Beat cream cheese and whipped topping together with an electric mixer in a bowl until well blended. Beat 2/3 cup sugar and vanilla extract into cream cheese mixture until smooth and fluffy.</li>
-        <li>Spoon 1/4 of cream cheese mixture onto graham cracker crust in each jar. Top each cheesecake with sliced strawberries. Refrigerate cheesecakes until serving time.</li>
+    <h3 class="list-header">Steps</h3>
+    <ol class="list-container">
+        <li>Prepare crust: Mix graham cracker crumbs, melted butter, and 1/4 cup sugar together in a bowl. Press 1/4 of
+            mixture into the bottom of each jar.</li>
+        <li>Prepare cheesecake: Beat cream cheese and whipped topping together with an electric mixer in a bowl until
+            well blended. Beat 2/3 cup sugar and vanilla extract into cream cheese mixture until smooth and fluffy.</li>
+        <li>Spoon 1/4 of cream cheese mixture onto graham cracker crust in each jar. Top each cheesecake with sliced
+            strawberries. Refrigerate cheesecakes until serving time.</li>
     </ol>
 </body>
+
 </html>
